# logjuicer-tests

./: .gitreview  .zuul.yaml  README.md  README.rst  requirements.txt  setup.cfg
datasets/ansible-01/: output.fail  output.good
datasets/basic-01/: log.good
datasets/dib-01/: inf.yaml
datasets/mock-01/: inf.yaml
datasets/syslog-01/: syslog.fail  syslog.good
datasets/tempest-01/: inf.yaml  tempest.fail
datasets/testr-nodepool-01/: inf.yaml  output.fail
datasets/zuul-console-01/: inf.yaml
datasets/zuul-console-pep8/: console.good
logreducetests/: cmd.py
tests/ansible-01/: inf.yaml  output.fail  output.good
tests/basic-01/: inf.yaml  log.fail
tests/dib-01/: inf.yaml  output.fail  output.good
tests/mock-01/: console.fail  console.good  inf.yaml
tests/syslog-01/: inf.yaml  syslog.fail
tests/tempest-01/: inf.yaml  tempest.good
tests/testr-nodepool-01/: inf.yaml  output.good
tests/zuul-console-01/: console.fail  console.good  inf.yaml
tests/zuul-console-pep8/: console.fail  inf.yaml
