[metadata]
name = logreduce-tests
summary = logreduce evaluation framework
description-file = README.rst
requires-python = >=3.5
author = Tristan Cacqueray
author-email = tdecacqu@redhat.com
home-page = https://logreduce.softwarefactory-project.io/
classifier =
    Intended Audience :: Developers
    Intended Audience :: System Administrators
    License :: OSI Approved :: Apache Software License
    Programming Language :: Python
    Programming Language :: Python :: 3.5
    Topic :: Scientific/Engineering

keywords = machine learning, ci, anomaly detection

[files]
packages = logreducetests
data_files = share/logreduce-tests = tests/*

[global]
setup-hooks = pbr.hooks.setup_hook

[wheel]
universal = 1

[entry_points]
console_scripts = logreduce-tests = logreducetests.cmd:main
